--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="100" data-doc-height="1" class="nav-bar w-hidden-medium w-hidden-small w-hidden-tiny w-nav">
     <div class="nav-bar-container w-container">
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" class="home-nav-link w-nav-link w--current">Home</a><a href="#Footer-Contact" class="contact-nav-link w-nav-link">Contact</a></nav>
-      <div class="menu-button w-nav-button">
+      <nav role="navigation" class="w-nav-menu">
+        <a href="index.html" class="home-nav-link w-nav-link w--current">Home</a>
+        <a href="#Footer-Contact" class="contact-nav-link w-nav-link">Contact</a>
+         </nav>
+    <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
@@ -45,7 +48,7 @@
       
     <div class="cuts-and-styling-div">
       <div class="services-div">
-        <h3 class="cuts-and-styling-heading"><em class="italic-text">Services</em></h3>
+        <h3 class="cuts-and-styling-heading">Services</h3>
       </div>
     </div>
     <div class="overall-footer-div">
@@ -61,7 +64,7 @@
         <div id="Hours-Text" class="hours-and-location-section"><strong class="bold-hours-and-location">Hours<br></strong><br>Tuesday-Friday 8:30 am<br>Saturday by appointment only<br><strong class="bold-text-2">Call for appointment (931) 319-2172</strong><br>‍</div>
         <div id="Hours-Text" class="hours-and-location-section"><strong class="bold-hours-and-location">Location<br></strong><br>427 North Willow Avenue, Suite B.<br>Cookeville, Tennessee 38501<br>Studio salon located in Shear Suites<br>‍</div>
       </div>
-      <div class="dev-info">  Web design by: <strong>www.jacytodd.com</strong></div>
+      <div class="dev-info">  Web design by: <strong>www.jacytodd.com</strong></div>
     </footer>
   </div>
     
