--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="overall-footer-div">
       <div class="styling-prices">
-        <div class="styling-and-bridal-prices"><strong class="hair-services-prices">Hair Services Pricing<br>‍<br>‍</strong>Full Foil Highlights $55 and up<br><br>Partial Highlights $45 and up<br>‍<br>Balayage $65 and up<br><br>Base Color $30<br><br>All Over Color $50<br><br>Women&#x27;s Cut $26<br>‍<br>Men&#x27;s Cut $15<br>‍<br>Child&#x27;s Cut $10<br>‍<br>Treatment&#x27;s $10 and up<br>‍<br>Brazilian Blowout $250<br>‍<br>Waxing $10 and up<br>‍</div>
+        <div class="styling-and-bridal-prices"><strong class="hair-services-prices">Pricing for Services<br>‍<br>‍</strong>Full Foil Highlights $55 and up<br><br>Partial Highlights $45 and up<br>‍<br>Balayage $65 and up<br><br>Base Color $30<br><br>All Over Color $50<br><br>Women&#x27;s Cut $26<br>‍<br>Men&#x27;s Cut $15<br>‍<br>Child&#x27;s Cut $10<br>‍<br>Treatment&#x27;s $10 and up<br>‍<br>Brazilian Blowout $250<br>‍<br>Waxing $10 and up<br>‍</div>
       </div>
     </div>
       
