--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           Base Color<br><br>
           All Over Color & Treatments<br><br>
           Brazilian Blowout $250<br><br>
-          Waxing $10 and up<br>
+          Waxing $10 and up<br><br><br>
           
           Call for Pricing (931) 319-2172
         </div>
