--- a/index.html
+++ b/index.html
@@ -60,13 +60,8 @@
           Women, Men, & Children<br><br>
           
           <strong class="hair-services-prices">Color Services & Treatments<br><br></strong>
-          Full Foil Highlights<br><br>
-          Partial Highlights<br><br>
-          Balayage<br><br>
-          Base Color<br><br>
-          All Over Color & Treatments<br><br>
-          Brazilian Blowout $250<br><br>
-          Waxing $10 and up<br><br><br>
+          Full Foil Highlights, Partial Highlights, Balayage, Base Color, 
+          All Over Color & Treatments, Brazilian Blowout, Waxing<br><br><br>
           
           Call for Pricing (931) 319-2172
         </div>
