--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           Women, Men, & Children<br><br>
           
           <strong class="hair-services-prices">Color Services & Treatments<br><br></strong>
-          Full Foil Highlights, Partial Highlights, Balayage, Base Color, 
+          Full Foil Highlights, Partial Highlights, Balayage, Base Color,<br>
           All Over Color & Treatments, Brazilian Blowout, Waxing<br><br><br>
           
           Call for Pricing (931) 319-2172
