--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="styling-and-bridal-prices">
           
           <strong class="hair-services-prices">Haircuts<br><br></strong>
-          Women, Men, & Children<br><br><br><br><br>
+          Women, Men, & Children<br><br><br>
           
           <strong class="hair-services-prices">Color Services & Treatments<br><br></strong>
           Full Foil Highlights, Partial Highlights, Balayage, Base Color,<br>
