--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           Full Foil Highlights, Partial Highlights, Balayage, Base Color,<br>
           All Over Color & Treatments, Brazilian Blowout, Waxing<br><br><br><br><br>
           
-          Call for Pricing (931) 319-2172<br><br>
+          Call for Pricing & Appointment (931) 319-2172
         </div>
     </div>
       
