--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="main-content">
     <h2 class="heading-for-company">About Caitlin:</h2>
     <div class="bio-with-picture-included w-container">
-      <div class="bio-section w-clearfix"><img src="images/caitlin.jpg" width="240" alt="caitlin styling hair for a client" srcset="images/caitlin-p-500.jpeg 500w, images/caitlin-p-800.jpeg 800w, images/caitlin.jpg 1080w" sizes="240px" class="website-picture">
+      <div class="bio-section w-clearfix">
         <p class="bio-paragraph">Caitlin Stokes is the owner and stylist of Ansley &amp; James Hair Company.<br>‍<br>If you would like to make a booking, please call or text for an appointment.<br><br>For more information on hours and the services offered, see below.</p>             <!--ADD MORE TO THE BIO SECTION HERE. BRING MORE CONTENT TO THIS SECTION.-->
       </div>
     </div>
