--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!--bio section where I can update the paragraph section for info.-->
     
   <div class="main-content">
-    <h2 class="heading-for-company">About Caitlin:</h2>
+    <h2 class="heading-for-company">About Caitlin</h2>
     <div class="bio-with-picture-included w-container">
       <div class="bio-section w-clearfix">
         <p class="bio-paragraph">Caitlin Stokes is the owner and stylist of Ansley &amp; James Hair Company.<br>‍<br>If you would like to make a booking, please call or text for an appointment.<br><br>For more information on hours and the services offered, see below.</p>             <!--ADD MORE TO THE BIO SECTION HERE. BRING MORE CONTENT TO THIS SECTION.-->
