--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>ansley &amp; James Hair Company</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
+  <!-- <link href="css/normalize.css" rel="stylesheet" type="text/css"> -->
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/otherstyle.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
