--- a/index.html
+++ b/index.html
@@ -30,16 +30,6 @@
     <img class="logo" src="assets/images/aj_vert-trans.png"/>
 </header>
 
-
-<section class="about">
-    <div class="container">
-        <div class="about-me">
-            <h2>About Caitlin</h2>
-            <p>Caitlin Stokes is the owner and stylist of Ansley & James Hair Company. If you would like to make a booking, please call or text for an appointment. For more information on hours and the services offered, see below.</p>
-        </div>
-    </div>
-</section> 
-
 <section id="services-section">
     <div class="container">
         <div id="services">
@@ -47,8 +37,8 @@
             <h4>Haircuts</h4>
             <p>Men, Women, & Children</p>
             <h4>Color & Treatments</h4>
-            <p>Full Foil Highlights, Partial Highlights, Balayage, Base Color, All Over Color Treatments, Brazilian Blowout, & Waxing</p>
-            <img src="assets/images/hair-tools.png">
+            <p>Full Foil Highlights, Partial Highlights, Balayage, Base Color, <br> All Over Color Treatments, Brazilian Blowout, & Waxing</p>
+        
         </div> 
     </div>   
 </section>
@@ -56,12 +46,11 @@
 <section id="contact">
     <h3>Hours & Location</h3>
     <p class="hours">Tuesday-Friday <time>8:30 am </time> - Close</p>
-    <p class="location">427 North Willow Avenue, Suite B. <br>Cookeville, Tennessee 38501.
+    <p class="hours">Call or text for appointment & pricing (931) 319 2172</p>
+    <p class="location">427 North Willow Avenue, Suite B. <br>Cookeville, Tennessee 38501. <br>
     <br>Studio salon located in Shear Suites</p>
+    <p class="hours">Saturdays by appointment only</p>
 </section>
-<div class="call">
-    <p>Call for pricing (931) 319 2172</p>
-</div>
     
 </body>
 
