--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </div>
     <div class="container">
         <div class="title-wrapper">
+            <img class="logo" src="assets/images/aj_vert-trans.png"/>
         </div>
     </div>
-    <img class="logo" src="assets/images/aj_vert-trans.png"/>
 </header>
 
 <section id="services-section">
@@ -42,13 +42,15 @@
         </div> 
     </div>   
 </section>
-
+    
 <section id="contact">
     <h3>Hours & Location</h3>
     <p class="hours">Tuesday-Friday <time>8:30 am </time> - Close</p>
     <p class="hours">Call or text for appointment & pricing (931) 319 2172</p>
-    <p class="location">427 North Willow Avenue, Suite B. <br>Cookeville, Tennessee 38501. <br>
+    <br>
+    <p class="location">427 North Willow Avenue, Suite B. <br>Cookeville, Tennessee 38501 <br>
     <br>Studio salon located in Shear Suites</p>
+    <br>
     <p class="hours">Saturdays by appointment only</p>
 </section>
     
