--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="assets/style.css" rel="stylesheet">
     <link href="assets/images/aj_.ico" rel="shortcut icon">
     <link href="assets/images/aj_.ico" rel="apple-touch-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,28 +35,24 @@
     <div class="container">
         <div id="services">
             <h2>Services</h2>
-            <h4>Haircuts</h4>
-            <p>Men, Women, & Children</p>
-            <h4>Color & Treatments</h4>
-            <p>Full Foil Highlights, Partial Highlights, Balayage, Base Color, <br> All Over Color Treatments, Brazilian Blowout, & Waxing</p>
-        
+            <h4>Haircuts & Color</h4>
+            <p>Full Foil Highlights, Partial Highlights, Balayage, Base Color, All Over Color Treatments, Brazilian Blowout, & Waxing.</p>
         </div> 
-    </div>   
-</section>
+    </div>
     
-<section id="contact">
-    <h3>Hours & Location</h3>
-    <p class="hours">Tuesday-Friday <time>8:30 am </time> - Close</p>
-    <p class="hours">Call or text for appointment & pricing (931) 319 2172</p>
-    <br>
-    <p class="location">427 North Willow Avenue, Suite B. <br>Cookeville, Tennessee 38501 <br>
+<div id="contact">
+    <h4>Hours</h4>
+    <p class="hours">Tuesday-Friday 8:30 am - Close</p>
+    <p class="hours">Call or text for appointment & pricing <a href="tel:9313192172">(931) 319 2172</a></p>
+    <h4>Location</h4>
+    <p class="location">427 North Willow Avenue, Suite B. <br> Cookeville, Tennessee 38501
     <br>Studio salon located in Shear Suites</p>
-    <br>
-    <p class="hours">Saturdays by appointment only</p>
+</div>
 </section>
 
 <footer>
-    <p>Website Developed by <a href="http://www.jacytodd.com">Jacy Todd</a> &copy 2019</p>
+    <p>Ansley & James Hair Company</p>
+    <p>Website Developed & Maintained by <a href="http://www.jacytodd.com">Jacy Todd</a> &copy 2019</p>
 </footer>
 
 </body>
